Issue #2962849 by gnikolovski: Add option to disable converting

--- a/cyrillic_to_latin.info.yml
+++ b/cyrillic_to_latin.info.yml
@@ -3,3 +3,4 @@ description: 'Converts cyrillic to latin letters on the fly for the Serbian lang
 type: module
 core: 8.x
 package: Multilingual
+configure: cyrillic_to_latin.admin_settings
