Update composer file

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,6 @@
     "description": "Converts cyrillic to latin letters on the fly for the Serbian language.",
     "type": "drupal-module",
     "homepage": "https://www.drupal.org/project/cyrillic_to_latin",
-    "license": "GPL-2.0+",
     "authors": [
         {
             "name": "Goran Nikolovski",
@@ -13,8 +12,10 @@
         }
     ],
     "support": {
-        "issues": "https://www.drupal.org/project/issues/cyrillic_to_latin"
+        "issues": "https://www.drupal.org/project/issues/cyrillic_to_latin",
+        "email": "nikolovski84@gmail.com"
     },
+    "license": "GPL-2.0+",
     "minimum-stability": "dev",
-    "require": { }
+    "require": {}
 }
