--- a/cyrillic_to_latin.info.yml
+++ b/cyrillic_to_latin.info.yml
@@ -2,5 +2,6 @@ name: 'Cyrillic to Latin'
 description: 'Converts cyrillic to latin letters on the fly for the Serbian language.'
 type: module
 core: 8.x
+core_version_requirement: ^8 || ^9
 package: 'Multilingual'
 configure: cyrillic_to_latin.admin_settings
