--- a/tests/cyrillic_to_latin_test/cyrillic_to_latin_test.info.yml
+++ b/tests/cyrillic_to_latin_test/cyrillic_to_latin_test.info.yml
@@ -3,6 +3,7 @@ type: module
 description: 'Support module for Cyrillic to Latin testing.'
 package: Testing
 core: 8.x
+core_version_requirement: ^8 || ^9
 dependencies:
   - drupal:node
   - cyrillic_to_latin:cyrillic_to_latin
