--- a/cyrillic_to_latin.info.yml
+++ b/cyrillic_to_latin.info.yml
@@ -5,3 +5,5 @@ core: 8.x
 core_version_requirement: ^8 || ^9
 package: 'Multilingual'
 configure: cyrillic_to_latin.admin_settings
+dependencies:
+  - drupal:locale
