Issue #3429745 by Project Update Bot, gnikolovski: Automated Drupal 11 compatibility fixes for cyrillic_to_latin

--- a/cyrillic_to_latin.info.yml
+++ b/cyrillic_to_latin.info.yml
@@ -1,7 +1,7 @@
 name: 'Cyrillic to Latin'
 description: 'Converts cyrillic to latin letters on the fly for the Serbian language.'
 type: module
-core_version_requirement: ^9 || ^10
+core_version_requirement: ^9 || ^10 || ^11
 package: 'Multilingual'
 configure: cyrillic_to_latin.admin_settings
 dependencies:
