--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,6 @@
     "license": "GPL-2.0+",
     "minimum-stability": "dev",
     "require": {
-        "drupal/core": "^9 || ^10"
+        "drupal/core": "^9 || ^10 || ^11"
     }
 }
