--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -59,6 +59,7 @@ variables:
   _PHPUNIT_CONCURRENT: '1'
   OPT_IN_TEST_PREVIOUS_MINOR: '1'
   OPT_IN_TEST_NEXT_MINOR: '1'
+  OPT_IN_TEST_NEXT_MAJOR: '1'
   OPT_IN_TEST_MAX_PHP: '1'
 
 ###################################################################################
